          (thanks to Richard Brown).
- TI-51   in the taskwarrior hook, deleting a task doesn't stop the watch
          (thanks to Mattia Rizzolo).
- TI-52   The 'refresh' scripts overwrites previous years data
          (thanks to m8r).
- TI-58   Delete command is not always deleting
          (thanks to Lynoure, asmyers).
- TI-61   Typo in exclusion.t.cpp
          (thanks to Thomas Lauf).
- TI-64   Command 'stop' with date before current interval's start date causes segfault
          (thanks to Thomas Lauf).
- TI-65   The 'tags' command should support a filter
- TI-67   Summary with parameters shows wrong ids
          (thanks to Bodo Graumann)
- TI-68   Cannot shorten interval which has been moved into an exclusion.
          (thanks to A M)
- TI-70   Timew starts a new interval even if a current interval contains the same set of tags
          (Thanks to Thomas Babej).
- Fixed Python 3 support of the holiday/refresh script
          (thanks to Jelle van der Waa).
- Added missing man page link
          (thanks to David Patrick).
- Taskwarrior projects are now used as-is as tags, and also split on the '.' to
  represent project hierarchy as separate tags.
          (thanks to Josh Proehl).
- New date names supported (see 'timew help date' or 'man timew').
- Named dates 'socw', 'socm', 'socq' and 'socy' are now named 'sow', 'som',
  'soq' and 'soy'. Similarly the 'eocw' etc are modified. The 'c' is now
  implicit.

------ current release ---------------------------

1.0.0 (2016-08-17) 6428ce89fcf2a5665d9351c50c2a84c98543206c

- WWW-12  yesterday tag not recognised
          (thanks to Michel Crucifix).
- TI-34   Make timew more user-friendly by adding --help and default output
          (thanks to Felix Wolfsteller).
- Added 'totals.py' sample extension.
- Added extension list to the 'help' command.

------ old release ---------------------------

1.0.0.beta1 (2016-07-26) -

- TI-9    Task spanning over whole day should show up as taking 24:00 instead